--- a/src/style.css
+++ b/src/style.css
@@ -92,6 +92,7 @@ button:focus-visible {
   display: flex;
   justify-content: center;
   align-items: center;
+  touch-action: pan-y;
 }
 
 .swiper-slide img {
