--- a/src/style.css
+++ b/src/style.css
@@ -24,10 +24,10 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+  padding: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 h1 {
@@ -61,8 +61,9 @@ button:focus-visible {
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: env(safe-area-inset-top) 2rem env(safe-area-inset-bottom);
   text-align: center;
+  flex: 1;
 }
 
 @media (prefers-color-scheme: light) {
@@ -80,8 +81,8 @@ button:focus-visible {
 
 .swiper {
   width: 100%;
-  height: 100%;
-  touch-action: pan-x; /* Restrict Swiper to horizontal touch */
+  height: calc(100% - env(safe-area-inset-top) - env(safe-area-inset-bottom));
+  touch-action: pan-x;
 }
 
 .swiper-slide {
@@ -102,6 +103,8 @@ button:focus-visible {
 }
 
 ion-content {
-  padding-top: env(safe-area-inset-top);
-  padding-bottom: env(safe-area-inset-bottom);
+  --padding-top: env(safe-area-inset-top);
+  --padding-bottom: env(safe-area-inset-bottom);
+  --padding-start: env(safe-area-inset-left);
+  --padding-end: env(safe-area-inset-right);
 }
