--- a/src/style.css
+++ b/src/style.css
@@ -100,3 +100,8 @@ button:focus-visible {
   height: 100%;
   object-fit: cover;
 }
+
+ion-content {
+  --overflow: hidden;
+  --padding-bottom: var(--ion-safe-area-bottom, 0px);
+}
