fix swiper slide

--- a/src/style.css
+++ b/src/style.css
@@ -92,6 +92,7 @@ button:focus-visible {
   justify-content: center;
   align-items: center;
   touch-action: auto; /* Allow default touch behavior in slides */
+  overflow: auto;
 }
 
 .swiper-slide img {
